crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__preview__suspicious-non-cryptographic-random-usage_S311.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
--- Linter settings ---
-linter.preview = disabled
+linter.preview = enabled

--- Summary ---
Removed: 0
Added: 2

--- Added ---
S311 Standard pseudo-random generators are not suitable for cryptographic purposes
  --> S311.py:26:5
   |
25 | # https://github.com/astral-sh/ruff/issues/15522
26 | map(random.randrange, [])
   |     ^^^^^^^^^^^^^^^^
27 | foo = random.randrange
   |


S311 Standard pseudo-random generators are not suitable for cryptographic purposes
  --> S311.py:27:7
   |
25 | # https://github.com/astral-sh/ruff/issues/15522
26 | map(random.randrange, [])
27 | foo = random.randrange
   |       ^^^^^^^^^^^^^^^^
