crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__preview__suspicious-url-open-usage_S310.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
--- Linter settings ---
-linter.preview = disabled
+linter.preview = enabled

--- Summary ---
Removed: 0
Added: 2

--- Added ---
S310 Audit URL open for permitted schemes. Allowing use of `file:` or custom schemes is often unexpected.
  --> S310.py:46:5
   |
45 | # https://github.com/astral-sh/ruff/issues/15522
46 | map(urllib.request.urlopen, [])
   |     ^^^^^^^^^^^^^^^^^^^^^^
47 | foo = urllib.request.urlopen
   |


S310 Audit URL open for permitted schemes. Allowing use of `file:` or custom schemes is often unexpected.
  --> S310.py:47:7
   |
45 | # https://github.com/astral-sh/ruff/issues/15522
46 | map(urllib.request.urlopen, [])
47 | foo = urllib.request.urlopen
   |       ^^^^^^^^^^^^^^^^^^^^^^
48 |
49 | # https://github.com/astral-sh/ruff/issues/21462
   |
