crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__preview__unsafe-yaml-load_S506.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
--- Linter settings ---
-linter.preview = disabled
+linter.preview = enabled

--- Summary ---
Removed: 7
Added: 0

--- Removed ---
S506 Probable use of unsafe loader `BaseLoader` with `yaml.load`. Allows instantiation of arbitrary objects. Consider `yaml.safe_load`.
  --> S506.py:41:24
   |
40 | # no issue should be found (preview mode only)
41 | yaml.load("{}", Loader=yaml.BaseLoader)
   |                        ^^^^^^^^^^^^^^^
42 | yaml.load("{}", Loader=yaml.CBaseLoader)
43 | yaml.load("{}", yaml.BaseLoader)
   |


S506 Probable use of unsafe loader `CBaseLoader` with `yaml.load`. Allows instantiation of arbitrary objects. Consider `yaml.safe_load`.
  --> S506.py:42:24
   |
40 | # no issue should be found (preview mode only)
41 | yaml.load("{}", Loader=yaml.BaseLoader)
42 | yaml.load("{}", Loader=yaml.CBaseLoader)
   |                        ^^^^^^^^^^^^^^^^
43 | yaml.load("{}", yaml.BaseLoader)
44 | yaml.load("{}", yaml.CBaseLoader)
   |


S506 Probable use of unsafe loader `BaseLoader` with `yaml.load`. Allows instantiation of arbitrary objects. Consider `yaml.safe_load`.
  --> S506.py:43:17
   |
41 | yaml.load("{}", Loader=yaml.BaseLoader)
42 | yaml.load("{}", Loader=yaml.CBaseLoader)
43 | yaml.load("{}", yaml.BaseLoader)
   |                 ^^^^^^^^^^^^^^^
44 | yaml.load("{}", yaml.CBaseLoader)
45 | from yaml import BaseLoader
   |


S506 Probable use of unsafe loader `CBaseLoader` with `yaml.load`. Allows instantiation of arbitrary objects. Consider `yaml.safe_load`.
  --> S506.py:44:17
   |
42 | yaml.load("{}", Loader=yaml.CBaseLoader)
43 | yaml.load("{}", yaml.BaseLoader)
44 | yaml.load("{}", yaml.CBaseLoader)
   |                 ^^^^^^^^^^^^^^^^
45 | from yaml import BaseLoader
46 | yaml.load("{}", Loader=BaseLoader)
   |


S506 Probable use of unsafe loader `BaseLoader` with `yaml.load`. Allows instantiation of arbitrary objects. Consider `yaml.safe_load`.
  --> S506.py:46:24
   |
44 | yaml.load("{}", yaml.CBaseLoader)
45 | from yaml import BaseLoader
46 | yaml.load("{}", Loader=BaseLoader)
   |                        ^^^^^^^^^^
47 | from yaml.loader import BaseLoader as BL
48 | yaml.load("{}", Loader=BL)
   |


S506 Probable use of unsafe loader `BL` with `yaml.load`. Allows instantiation of arbitrary objects. Consider `yaml.safe_load`.
  --> S506.py:48:24
   |
46 | yaml.load("{}", Loader=BaseLoader)
47 | from yaml.loader import BaseLoader as BL
48 | yaml.load("{}", Loader=BL)
   |                        ^^
49 | from yaml.cyaml import CBaseLoader
50 | yaml.load("{}", Loader=CBaseLoader)
   |


S506 Probable use of unsafe loader `CBaseLoader` with `yaml.load`. Allows instantiation of arbitrary objects. Consider `yaml.safe_load`.
  --> S506.py:50:24
   |
48 | yaml.load("{}", Loader=BL)
49 | from yaml.cyaml import CBaseLoader
50 | yaml.load("{}", Loader=CBaseLoader)
   |                        ^^^^^^^^^^^
